
 phpVMS is licenced under the following license:
   Creative Commons Attribution Non-commercial Share Alike (by-nc-sa)
   View license.txt in the root, or visit:
		http://creativecommons.org/licenses/by-nc-sa/3.0/
---

Build <<REVISION>> (Version 1.1.<<REVISION>>)

  * Aircraft registration options added
  * Routes can be assigned specific aircraft/registration
  * Dynamic signatures generated, to use on forums, etc
  * Bug fixes for servers with short_open_tags off
  * ACARS map shows the proper map type/centers according to settings
  * Admin edit of profile didn't recalculate for new rank
  * Bids are removed now when PIREP is done through ACARS
  * Updates to the updater, will automatically put new options in your local config
  
  Added options (place in your core/local.config.php), if they are not there
  
		# These are the default center points to the map
		Config::Set('MAP_CENTER_LAT', '45.484400');
		Config::Set('MAP_CENTER_LNG', '-62.334821');
	
  Template Changes (use WinMerge to see changes):
  
	registration_mainform.tpl
	profile_edit.tpl
	pilots_list.tpl
	pirep_new.tpl
	
	
Build 400 (Version 1.1.400)

  * FSACARS status updates and PIREPS support (thanks to Roger from www.fspaintshop.com for the icons!)
  * FSACARS configuration file automatically generated, specific to pilot (update your profile_main.tpl)
  * ACARS API so ACARS programs can be integrated through ACARS plugin
  * XML interface for custom applications (ACARS, flight data) and other data
  * Pilot pay! Pay rate adjustable to the rank (shows up in profile_main.tpl)
  * Schedules results improved (schedule_results.tpl), update to this!
  * Flight leg taken into account on checking schedule
  * Profile editing bugs fixed
  * Page deletes actually work (woo!)
  * Pilot deleted if registration is rejected
  * PIREP field insertion bug fixed
  * Registration anomolies (required fields marked with *)
  * PIREP submission fixed (missing flight leg)
  * Ranking fixes (ranks can be deleted)